Make some adjustments to institution filtering
